<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnectionFragment">


    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="200dp">

            <TextView
                android:text="@string/connexion"
                style="@style/titre"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/emailc"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                style="@style/edit" />

            <EditText
                android:id="@+id/passwordc"
                android:hint="@string/mdp"
                android:inputType="textPassword"
                style="@style/edit" />

            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/SignIn"
                android:text="@string/connecter"
                style="@style/button"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empreinte"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/empreinte"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">
                <TextView
                    style="@style/text"
                    android:text="@string/pas" />

                <TextView
                    android:text="@string/inscrire"
                    android:id="@+id/SignUp"
                    style="@style/textp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>